# Human_tracker

laser_clustering/: CMakeLists.txt  package.xml
laser_clustering/msg/: Cluster.msg  ClusterArray.msg
laser_clustering/src/: from_laser_to_point_cloud.cpp  laser_cluster_node.cpp  laser_cluster_node_old_code.cpp  my_algebra_common.cpp  odom_tf_broadcaster.py  tf_refresh.cpp
tracking/: CMakeLists.txt  package.xml
tracking/config/: base_local_planner_params.yaml  cmd_mux_config.yaml  costmap_common_params.yaml  global_costmap_luis_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  visibility_planner_luis_params.yaml  visibility_planner_params.yaml
tracking/include/: .on_board_human_tracker_2d_likelihood.h.swp  compute_likelihood.h  my_algebra_common.h  on_board_human_tracker_2d.h  on_board_human_tracker_2d_likelihood.h  preprocess_cluster.h  tracking.h  tracking_particle_filter.h
tracking/include/old_include_code/: tracking_particle_filter.h
tracking/msg/: BoolStampedArray.msg  Candidate.msg  CandidateArray.msg  Int16StampedArray.msg  Int32StampedArray.msg  Int64StampedArray.msg  PoseWithCovarianceStampedArray.msg
tracking/src/: .sync_visit_maps.cpp.swp  affordance_map.cpp  build_map.cpp  compute_likelihood.cpp  compute_likelihood_detection.cpp  compute_likelihood_tracking.cpp  convert_laser_visit_map.cpp  convert_laser_visit_map_old.cpp  cumulative_density_map.cpp  density_map.cpp  fake_cloud_laser.cpp  fake_cluster.cpp  laser_visit_map.cpp  laser_visit_map_for_mapping.cpp  laser_visit_map_old.cpp  preprocess_cluster.cpp  python_test_script.py  show_likelihood.cpp  sync_visit_maps.cpp  test_amcl_init.sh  tracking_particle_filter.cpp  velodyne_transformer.cpp
tracking/src/old_code/: build_costmap_value.cpp  density_map_debug.cpp  fake_humans.cpp  fake_publisher.cpp  human_tracked_map.cpp  on_board_human_tracker_2d.cpp  on_board_human_tracker_2d_likelihood.cpp  tracking_particle_filter.cpp  visited_map.cpp
tracking/srv/: SaveCountingMap.srv  SetLaserUsed.srv
